# wxWidget_Hello_World_Jetson_Nano

./: CMakeLists.txt  CMakeLists_WRONG.txt  hello_world_program  main.cpp
